--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"react": "^18.2.0",
 		"react-chatbot-kit": "^2.2.2",
 		"react-dom": "^18.2.0",
+		"react-google-maps": "^9.4.5",
 		"react-hot-toast": "^2.4.1",
 		"react-leaflet": "^4.2.1",
 		"react-leaflet-draw": "^0.20.4",
